--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,4 +14,6 @@ kafka-clients           = { module="org.apache.kafka:kafka-clients",            
 apicurio-registry-serdes-avro-serde={ module="io.apicurio:apicurio-registry-serdes-avro-serde",version="2.6.3.Final"}
 reflections             = { module="org.reflections:reflections",                              version="0.9.12" }
 junit-platform-launcher = { module="org.junit.platform:junit-platform-launcher",               version="1.11.0" }
-
+junit-jupiter           = { module="org.junit.jupiter:junit-jupiter",                          version="5.11.0" }
+junit-jupiter-api       = { module="org.junit.jupiter:junit-jupiter-api",                      version="5.11.0" }
+junit-jupiter-params    = { module="org.junit.jupiter:junit-jupiter-params",                   version="5.11.0" }
