--- a/application/build.gradle
+++ b/application/build.gradle
@@ -4,8 +4,11 @@ plugins {
 
 dependencies {
     implementation project(':core')
+    implementation libs.slf4j
+
+    runtimeOnly libs.logback.classic
 }
 
 application {
-    mainClass = 'cz.horadraka.kafky.application.Application'
+    mainClass = 'io.github.cyrilsochor.kafky.application.Application'
 }
