--- a/application/build.gradle
+++ b/application/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 dependencies {
     implementation project(':core')
+    implementation libs.jul.to.slf4j
 
     runtimeOnly libs.logback.classic
 }
