--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,9 @@
 [libraries]
 slf4j                   = { module="org.slf4j:slf4j-api",                                      version="2.0.16" }
+jul-to-slf4j            = { module="org.slf4j:jul-to-slf4j",                                   version="2.0.16" }
 logback-classic         = { module="ch.qos.logback:logback-classic",                           version="1.5.7"  }
 snakeyaml-engine        = { module="org.snakeyaml:snakeyaml-engine",                           version="2.7"    }
+avro                    = { module="org.apache.avro:avro",                                     version="1.11.3" }
 jackson-core            = { module="com.fasterxml.jackson.core:jackson-core",                  version="2.17.2" }
 jackson-annotations     = { module="com.fasterxml.jackson.core:jackson-annotations",           version="2.17.2" }
 jackson-dataformat-yaml = { module="com.fasterxml.jackson.dataformat:jackson-dataformat-yaml", version="2.17.2" }
@@ -13,6 +15,8 @@ commons-collections4    = { module="org.apache.commons:commons-collections4",   
 kafka-clients           = { module="org.apache.kafka:kafka-clients",                           version="3.8.0"  }
 apicurio-registry-serdes-avro-serde={ module="io.apicurio:apicurio-registry-serdes-avro-serde",version="2.6.3.Final"}
 reflections             = { module="org.reflections:reflections",                              version="0.9.12" }
+evalex                  = { module="com.ezylang:EvalEx",                                       version="3.3.0"  }
+brave                   = { module="io.zipkin.brave:brave",                                    version="5.16.0" }
 junit-platform-launcher = { module="org.junit.platform:junit-platform-launcher",               version="1.11.0" }
 junit-jupiter           = { module="org.junit.jupiter:junit-jupiter",                          version="5.11.0" }
 junit-jupiter-api       = { module="org.junit.jupiter:junit-jupiter-api",                      version="5.11.0" }
