--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,4 @@ rootProject.name = 'kafky'
 include('application')
 include('core')
 include('api')
-//include('samples:avro-specific')
+include('samples:avro-specific')
